chore: add mapper of infra on configs

--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "testEnvironment": "node",
     "moduleNameMapper": {
       "@src/(.*)": "<rootDir>/$1",
-      "@domain/(.*)": "<rootDir>/domain/$1"
+      "@domain/(.*)": "<rootDir>/domain/$1",
+      "@infra/(.*)": "<rootDir>/infra/$1"
     }
   }
 }
