--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@src/*": ["src/*"],
-      "@domain/*": ["src/domain/*"]
+      "@domain/*": ["src/domain/*"],
+      "@infra/*": ["src/infra/*"]
     }
   }
 }
